added a few styling issues and fixed mode

--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
 /* Imported a font */
 
-@import url("https://p.typekit.net/p.css?s=1&k=oov2wcw&ht=tk&f=39203&a=85994746&app=typekit&e=css");
+@import url('https://p.typekit.net/p.css?s=1&k=oov2wcw&ht=tk&f=39203&a=85994746&app=typekit&e=css');
 
 @font-face {
-font-family:"century-gothic";
-src:url("https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
-font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
+  font-family: 'century-gothic';
+  src: url('https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3')
+      format('woff2'),
+    url('https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3')
+      format('woff'),
+    url('https://use.typekit.net/af/afc5c6/00000000000000003b9b1f23/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3')
+      format('opentype');
+  font-display: auto;
+  font-style: normal;
+  font-weight: 400;
+  font-stretch: normal;
 }
 
-.tk-century-gothic { font-family: "century-gothic",sans-serif; }
+.tk-century-gothic {
+  font-family: 'century-gothic', sans-serif;
+}
 
 * {
   background-color: black;
@@ -41,7 +51,6 @@ body {
   width: 500px;
   /* background-color: aqua; */
   margin-bottom: 20px;
-  
 }
 
 #image {
@@ -55,13 +64,14 @@ body {
   /* display: flex; */
   /* justify-content: center; */
   width: 500px;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
 }
 
 #quote {
   width: 500px;
-  font-family: "century-gothic",sans-serif;
+  font-family: 'century-gothic', sans-serif;
   font-size: larger;
   text-align: center;
   padding-bottom: 10px;
@@ -71,5 +81,12 @@ body {
   width: 500px;
   text-align: right;
   font-style: italic;
-  font-family: "century-gothic",sans-serif;
+  font-family: 'century-gothic', sans-serif;
+}
+
+#splitline {
+  margin: auto;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
